tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__styles__style_scoping.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{{Red, Disk[]}, Circle[{2, 0}]}]\")"
---
<svg width="360" height="180" viewBox="0 0 360 180" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x180"><rect x="0" y="0" width="360.00" height="180.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x180)">
<ellipse cx="96.67" cy="90.00" rx="83.33" ry="83.33" fill="rgb(255,0,0)"/>
<ellipse cx="263.33" cy="90.00" rx="83.33" ry="83.33" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
